Fix of the overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-    @apply bg-black text-white;
+    @apply bg-black text-white overflow-hidden;
 }
 
 .slider {
